--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,25 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+.img {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.img1 {
+    margin-bottom: 10px;
+}
+
+.header-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-top {
+  margin: 34px;
+  text-decoration: none;
+  color: black;
+}
