--- a/css/index.css
+++ b/css/index.css
@@ -244,3 +244,76 @@ button {
     margin-bottom: 30px;;
     display: flex;
 }
+
+/*Products HTML Stretch CSS*/
+
+.headerS {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.navS {
+    margin-bottom: 10px;
+}
+
+.services-header-img {
+    margin-bottom: 25px;
+    margin-top: 25px;
+    border
+}
+
+
+
+.top-text {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-bottom: 1px solid black;
+   
+}
+
+.top-text h2 {
+    font-size: 25px;
+}
+
+.main-text {
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid black;
+    background: rgba(0, 0, 0, 1);
+    height: 300px;
+    width: 340px;
+    color: white;
+}
+
+.services-main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.services-main h2 {
+    font-size: 20px;
+}
+
+.services-main button {
+    width: 80px;
+    height: 45px;
+    border: .5px solid black;
+}
+
+
+
+.services-bottom {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    margin: 10px;
+    border-top: 1px solid black;
+    padding: 20px;
+}
